--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/styles3.css" />
+
     <title>Page 3</title>
   </head>
   <body>
@@ -11,6 +13,27 @@
       <a href="./index.html">Go to home</a>
       <h1></h1>
     </section>
+    <form class="form">
+      <label class="label-delay">
+        Delay (ms)
+        <input type="number" name="delay" required />
+      </label>
+
+      <fieldset class="frame">
+        <legend class="legend">State</legend>
+        <label class="label-radio">
+          <input type="radio" name="state" value="fulfilled" required />
+          <span> Fulfilled </span>
+        </label>
+        <label class="label-radio">
+          <input type="radio" name="state" value="rejected" required />
+          <span>Rejected</span>
+        </label>
+      </fieldset>
+
+      <button class="btn-start" type="submit">Create notification</button>
+    </form>
+
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
