--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" type="text/css" href="css/styles2.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles3.css" />
   </head>
   <body>
     <load ="partials/header.html" />
