--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Home-work 10</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" type="text/css" href="css/styles2.css" />
     <link rel="stylesheet" type="text/css" href="css/styles3.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- <load ="partials/header.html" /> -->
+    <ul class="list">
+      <li>
+        <div class="btn-container">
+          <a class="btn" href="1-timer.html">Countdown timer</a>
+        </div>
+      </li>
+      <li>
+        <div class="btn-container">
+          <a class="btn" href="2-snackbar.html">Promise generator</a>
+        </div>
+      </li>
+    </ul>
   </body>
 </html>
