--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/styles3.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles3.css" />
 
     <title>Page 3</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1></h1>
-    </section>
+    <ul class="list">
+      <div class="btn-container">
+        <a class="btn" href="./index.html">Go back</a>
+      </div>
+    </ul>
     <form class="form">
       <label class="label-delay">
         Delay (ms)
