--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,29 @@
     <title>Home-work 10</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" type="text/css" href="css/styles2.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles3.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles2.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles3.css" />
   </head>
   <body>
     <ul class="list">
       <li>
         <div class="btn-container">
-          <a class="btn" href="1-timer.html">Countdown timer</a>
+          <a class="btn" href="./1-timer.html">Countdown timer</a>
         </div>
       </li>
       <li>
         <div class="btn-container">
-          <a class="btn" href="2-snackbar.html">Promise generator</a>
+          <a class="btn" href="./2-snackbar.html">Promise generator</a>
         </div>
       </li>
     </ul>
