--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/styles2.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles2.css" />
     <title>Page 2</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1></h1>
-    </section>
+    <ul class="list">
+      <div class="btn-container">
+        <a class="btn" href="./index.html">Go back</a>
+      </div>
+    </ul>
     <div class="time2">
       <input type="text" id="datetime-picker" class="time1" />
       <button type="button" data-start class="time1">Start</button>
